Gestiona la entrada de teclado para la calculadora.,Realiza operaciones inmediatas sobre el número mostrado. Actualiza function actualizarPantalla()

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
                 <button class="boton inmediatas" id="inverso">1/x</button>
                 <button class="boton inmediatas" id="Cuadrado">x²</button>
-                <button class="boton inmediatas" id="Raíz cuadrada">√</button>
+                <button class="boton inmediatas" id="Raiz_cuadrada">√</button>
                 <button class="boton operador" id="dividir">/</button>
 
                 <button class="boton numero">7</button>
